[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/Background.gd" type="Script" id=1]
[ext_resource path="res://Scripts/BackgroundTile.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0010_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0009_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0008_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0007_Lights.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0006_4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0005_5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0004_Lights.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0003_6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0002_7.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0001_8.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Backgrounds/Forest/Layer_0000_9.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=14]
[ext_resource path="res://Sprites/Characters/Vampire_SpriteSheet.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Player/Idle.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Player/Run.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.0065, 10 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=3]

length = 1.6
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

length = 0.6
loop = false
step = 0.1

[sub_resource type="Animation" id=9]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 19 ]
}

[node name="World" type="Node" index="0"]

[node name="Background" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 1 )

[node name="Tile3" type="StaticBody2D" parent="Background" index="0"]

position = Vector2( 928, 0 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Backdrop" type="Sprite" parent="Background/Tile3" index="0"]

texture = ExtResource( 3 )

[node name="Haze" type="Sprite" parent="Background/Tile3" index="1"]

texture = ExtResource( 4 )

[node name="Trees4" type="Sprite" parent="Background/Tile3" index="2"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="LightsFar" type="Sprite" parent="Background/Tile3" index="3"]

texture = ExtResource( 6 )

[node name="Trees3" type="Sprite" parent="Background/Tile3" index="4"]

texture = ExtResource( 7 )

[node name="Trees2" type="Sprite" parent="Background/Tile3" index="5"]

texture = ExtResource( 8 )

[node name="LightsNear" type="Sprite" parent="Background/Tile3" index="6"]

texture = ExtResource( 9 )

[node name="Trees1" type="Sprite" parent="Background/Tile3" index="7"]

texture = ExtResource( 10 )

[node name="TreeTops" type="Sprite" parent="Background/Tile3" index="8"]

texture = ExtResource( 11 )

[node name="Grass" type="Sprite" parent="Background/Tile3" index="9"]

texture = ExtResource( 12 )

[node name="Ground" type="Sprite" parent="Background/Tile3" index="10"]

texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Tile3" index="11"]

position = Vector2( -14.4677, 365.236 )
scale = Vector2( 51.3572, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Tile2" type="StaticBody2D" parent="Background" index="1"]

input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Backdrop" type="Sprite" parent="Background/Tile2" index="0"]

texture = ExtResource( 3 )

[node name="Haze" type="Sprite" parent="Background/Tile2" index="1"]

texture = ExtResource( 4 )

[node name="Trees4" type="Sprite" parent="Background/Tile2" index="2"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="LightsFar" type="Sprite" parent="Background/Tile2" index="3"]

texture = ExtResource( 6 )

[node name="Trees3" type="Sprite" parent="Background/Tile2" index="4"]

texture = ExtResource( 7 )

[node name="Trees2" type="Sprite" parent="Background/Tile2" index="5"]

texture = ExtResource( 8 )

[node name="LightsNear" type="Sprite" parent="Background/Tile2" index="6"]

texture = ExtResource( 9 )

[node name="Trees1" type="Sprite" parent="Background/Tile2" index="7"]

texture = ExtResource( 10 )

[node name="TreeTops" type="Sprite" parent="Background/Tile2" index="8"]

texture = ExtResource( 11 )

[node name="Grass" type="Sprite" parent="Background/Tile2" index="9"]

texture = ExtResource( 12 )

[node name="Ground" type="Sprite" parent="Background/Tile2" index="10"]

texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Tile2" index="11"]

position = Vector2( -129.125, 365.236 )
scale = Vector2( 51.3572, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Tile1" type="StaticBody2D" parent="Background" index="2"]

position = Vector2( -928, 0 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Backdrop" type="Sprite" parent="Background/Tile1" index="0"]

texture = ExtResource( 3 )

[node name="Haze" type="Sprite" parent="Background/Tile1" index="1"]

texture = ExtResource( 4 )

[node name="Trees4" type="Sprite" parent="Background/Tile1" index="2"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="LightsFar" type="Sprite" parent="Background/Tile1" index="3"]

texture = ExtResource( 6 )

[node name="Trees3" type="Sprite" parent="Background/Tile1" index="4"]

texture = ExtResource( 7 )

[node name="Trees2" type="Sprite" parent="Background/Tile1" index="5"]

texture = ExtResource( 8 )

[node name="LightsNear" type="Sprite" parent="Background/Tile1" index="6"]

texture = ExtResource( 9 )

[node name="Trees1" type="Sprite" parent="Background/Tile1" index="7"]

texture = ExtResource( 10 )

[node name="TreeTops" type="Sprite" parent="Background/Tile1" index="8"]

texture = ExtResource( 11 )

[node name="Grass" type="Sprite" parent="Background/Tile1" index="9"]

texture = ExtResource( 12 )

[node name="Ground" type="Sprite" parent="Background/Tile1" index="10"]

texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Tile1" index="11"]

position = Vector2( 13.5533, 366.743 )
scale = Vector2( 51.3572, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Player" type="KinematicBody2D" parent="." index="1"]

position = Vector2( -3.01465, 57.7235 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 14 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player" index="0"]

position = Vector2( 0, -16 )
texture = ExtResource( 15 )
vframes = 8
hframes = 10
frame = 10
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="1"]

offset = Vector2( 0, -220 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.95, 0.95 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="2"]

position = Vector2( -2.36644, 11.4292 )
scale = Vector2( 2.20256, 2.20255 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player" index="3"]

root_node = NodePath("../Sprite")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
anims/heavy_attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/light_attack = SubResource( 7 )
anims/roll = SubResource( 8 )
anims/run = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="States" type="Node2D" parent="Player" index="4"]

[node name="Idle" type="Node2D" parent="Player/States" index="0"]

script = ExtResource( 16 )

[node name="Run" type="Node2D" parent="Player/States" index="1"]

script = ExtResource( 17 )


